--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "ioredis": "^4.28.2",
     "nodemon": "^2.0.15",
+    "redis": "^4.0.1",
     "socket.io": "^4.4.0",
     "venom-bot": "^4.0.3"
   }
