--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "events": "^3.3.0",
     "express": "^4.17.2",
     "ioredis": "^4.28.2",
     "nodemon": "^2.0.15",
